Fixed overflow-y scroll bar that was always displayed on Windows

--- a/image_explorer/public/css/image_explorer.css
+++ b/image_explorer/public/css/image_explorer.css
@@ -15,7 +15,7 @@
     top: 25%;
     z-index: 2;
     display: none;
-    overflow-y: scroll;
+    overflow-y: auto;
     cursor: default;
 }
 
